feat: implemented 11-billing-cycle-setup
